=======
CHANGES
=======

3.5.1 (Unreleased)
------------------

- ...


3.5.0 (2009-12-19)
------------------

- Use ``zope.password`` instead of ``zope.app.authentication``

- Depend on new ``zope.processlifetime`` implementations instead of
  using BBB imports from ``zope.app.appsetup``.


3.4.2 (2008-08-18)
------------------

- Moved a doctest into a unittest to fix failures in the KGS test suite
  (see LP #257954)

3.4.1 (2008-02-25)
------------------

- Fixed restart so that the process exits with a non-zero exit status
  so it gets restarted by zdaemon, or an equivalent mechanism.

- Removed the use of ``ThreadedAsync``.

3.4.0 (2007-10-27)
------------------

- Initial release independent of the main Zope tree.