@@ -59,11 +59,12 @@ setup(name='zope.app.server',
                         'zope.app.publication',
                         'zope.app.wsgi',
                         'zope.configuration',
+                        'zope.deprecation',
                         'zope.event',
                         'zope.interface',
                         'zope.publisher',
                         'zope.server',
-                        'zope.password',
+                        'zope.password >= 3.6.0',
                         'zope.processlifetime',
                         'zdaemon',
                         'ZConfig',
